fix: Global style and interactions optimization

--- a/apps/web/src/components/code-editor/components/editor/style.less
+++ b/apps/web/src/components/code-editor/components/editor/style.less
@@ -1,13 +1,14 @@
 .ms-code-editor-content {
     flex: 1;
     overflow: hidden;
+    font-size: @font-size-md;
 
     .cm-scroller {
         outline: none;
     }
 
     .cm-content {
-        padding-right: @padding-xs;
+        padding: @padding-xs @padding-md @padding-xxs @padding-xs;
     }
 
     .cm-editor {
