--- a/apps/web/src/components/code-editor/components/header/style.less
+++ b/apps/web/src/components/code-editor/components/header/style.less
@@ -6,6 +6,7 @@
     border-bottom: @border-base;
 
     &__title {
+        font-weight: @font-weight-medium;
         color: var(--text-color-secondary);
         .text-size(@font-size-md);
     }
@@ -14,6 +15,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        color: var(--icon-color-gray-secondary);
 
         .ms-header-copy {
             cursor: pointer;
