--- a/apps/web/src/components/code-editor/components/lang-select/style.less
+++ b/apps/web/src/components/code-editor/components/lang-select/style.less
@@ -6,6 +6,8 @@
     .MuiSelect-select.MuiInputBase-input {
         padding: 0;
         padding-right: @padding-xxl;
+        font-weight: @font-weight-medium;
+        color: var(--text-color-secondary);
     }
 
     .MuiOutlinedInput-notchedOutline {
