--- a/apps/web/src/components/code-editor/style.less
+++ b/apps/web/src/components/code-editor/style.less
@@ -6,5 +6,5 @@
     overflow: hidden;
     background-color: var(--main-background);
     border: @border-base;
-    border-radius: @border-radius-xs;
+    border-radius: @border-radius-base;
 }
