--- a/apps/web/src/components/confirm/style.less
+++ b/apps/web/src/components/confirm/style.less
@@ -19,7 +19,7 @@
                 margin-right: @margin-xs;
 
                 .@{mui-prefix}SvgIcon-root {
-                    font-size: @font-size-xxl;
+                    font-size: @font-size-6;
                 }
             }
         }
