--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -46,7 +46,7 @@
     &-item-conditions {
         position: relative;
         margin-bottom: @margin-md;
-        border-bottom: 1px solid var(--border-color-base);
+        border-bottom: 1px solid var(--border-color-gray-light);
 
         &.multiple-conditions {
             padding-left: 64px;
@@ -176,8 +176,8 @@
 
     &-item-mvel {
         position: relative;
-        padding-bottom: @padding-sm;
-        margin-bottom: @margin-xl;
+        padding-bottom: @padding-xxs;
+        margin-bottom: @margin-md;
         border-bottom: 1px solid var(--border-color-base);
     }
 }
