--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/more-menu/style.less
@@ -25,6 +25,7 @@
             &-content {
                 display: flex;
                 gap: @margin-xs;
+                align-items: center;
                 margin-top: @margin-xs;
                 .text-size(@font-size-lg);
 
