--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-select/style.less
@@ -2,7 +2,7 @@
     &-option-groupname.@{mui-prefix}ListSubheader-root {
         .text-size(@font-size-sm);
 
-        margin-top: @margin-xs;
+        margin: @margin-xs 0 @margin-xxs;
     }
 
     &-option.@{mui-prefix}MenuItem-root {
