--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/service-param-assign-input/style.less
@@ -1,3 +1,11 @@
+.@{prefix}-service-invocation-setting {
+    .@{prefix}-entity-select {
+        .@{mui-prefix}FormControl-root {
+            margin-bottom: 0;
+        }
+    }
+}
+
 .@{prefix}-service-param-assign-input {
     .@{prefix}-empty-img {
         width: 96px;
