--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -19,6 +19,7 @@
         .queue-item {
             display: flex;
             gap: @margin-xs;
+            align-items: center;
             margin-bottom: @margin-md;
 
             > .@{mui-prefix}FormControl-root {
@@ -35,6 +36,7 @@
     &-exec-interval {
         display: flex;
         gap: @margin-xs;
+        align-items: center;
 
         > .@{mui-prefix}FormControl-root {
             flex: 1;
