--- a/apps/web/src/pages/workflow/views/editor/components/edge/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/edge/style.less
@@ -22,4 +22,11 @@
         font-size: @font-size-lg;
         pointer-events: none;
     }
+
+    .@{mui-prefix}Stack-root:hover {
+        .@{mui-prefix}SvgIcon-root {
+            transition: .3s;
+            transform: scale(1.25);
+        }
+    }
 }
