--- a/apps/web/src/pages/workflow/views/editor/components/node-container/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/node-container/style.less
@@ -1,7 +1,7 @@
 .@{prefix}-workflow {
     // ---------- Node style variable override ----------
     --xy-node-border: none;
-    --xy-node-border-radius: @border-radius-sm;
+    --xy-node-border-radius: @border-radius-md;
     --xy-node-boxshadow-selected: none;
 
     // ---------- Node Style ----------
