--- a/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/topbar/style.less
@@ -1,5 +1,5 @@
 .@{prefix}-workflow-topbar {
-    padding: @padding-xs @padding-lg;
+    padding: @padding-xs @padding-md;
     background-color: var(--component-background);
     border-bottom: 1px solid var(--border-color-base);
 
