--- a/apps/web/src/pages/workflow/components/action-log/components/header/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/header/style.less
@@ -27,6 +27,7 @@
             flex: 1;
             overflow: hidden;
             font-weight: @font-weight-medium;
+            .text-size(@font-size-base);
         }
     }
 
@@ -35,6 +36,8 @@
         display: flex;
         align-items: center;
         margin-left: @margin-xxs;
+        color: var(--text-color-secondary);
+        .text-size(@font-size-base);
     }
 
     .ms-log-status {
