--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -2,6 +2,7 @@
     &-item {
         display: flex;
         gap: @margin-xs;
+        align-items: center;
         margin-bottom: @margin-md;
 
         .@{mui-prefix}FormControl-root {
