fix: OutlinedInput border color adjustment

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -106,9 +106,9 @@
             .input-wrapper {
                 flex: 1;
 
-                // .@{mui-prefix}InputBase-input {
-                //     .text-size(@font-size-base);
-                // }
+                .@{mui-prefix}InputBase-root:hover .@{mui-prefix}OutlinedInput-notchedOutline {
+                    z-index: 1;
+                }
 
                 .select {
                     display: flex;
