feat: user role item ui adjustment

--- a/apps/web/src/pages/user-role/views/role/style.module.less
+++ b/apps/web/src/pages/user-role/views/role/style.module.less
@@ -19,7 +19,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                padding: @padding-xs @padding-sm;
+                padding: @padding-xxs @padding-sm;
                 margin-bottom: @margin-xxs;
                 border-radius: @border-radius-base;
 
@@ -35,6 +35,7 @@
                 .name-wrapper {
                     display: flex;
                     overflow: hidden;
+                    .text-size(@font-size-base);
 
                     .icon {
                         margin-right: @margin-xs;
