feat: dashboard and user role module ui adjustment

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -110,7 +110,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0 @padding-lg;
+            padding: 0 @padding-xxl 0 @padding-md;
         }
 
         &-empty {
