--- a/apps/web/src/components/table-transfer/style.less
+++ b/apps/web/src/components/table-transfer/style.less
@@ -8,7 +8,10 @@
 
     &__list {
         flex: 1 1 50%;
-        max-width: calc(50% - 24px);
+        max-width: calc(50% - 32px);
+        padding: @padding-lg;
+        border: @border-base;
+        border-radius: @border-radius-base;
     }
 
     &__operation {
