--- a/apps/web/src/plugin/plugins/text/view/style.less
+++ b/apps/web/src/plugin/plugins/text/view/style.less
@@ -7,6 +7,8 @@
     .text-size(@font-size-3);
 
     &__preview {
+        min-width: 300px;
+        max-width: 500px;
         max-height: 300px;
     }
 
