fix: the dashboard Image plugin style adjustment

--- a/apps/web/src/plugin/plugins/image/view/style.less
+++ b/apps/web/src/plugin/plugins/image/view/style.less
@@ -20,9 +20,15 @@
         display: flex;
         flex: 1;
         align-items: center;
+        justify-content: center;
         height: 0;
         overflow: hidden;
         border-radius: @border-radius-base;
+    }
+
+    &__empty_icon {
+        font-size: @font-size-7;
+        color: var(--icon-color-gray-light);
     }
 
     &__img {
