fix: Optimized the style of dashboard Text and Image plugins

--- a/apps/web/src/plugin/plugins/image/view/style.less
+++ b/apps/web/src/plugin/plugins/image/view/style.less
@@ -13,7 +13,8 @@
 
     &__header {
         margin-bottom: @margin-xxs;
-        .text-size(@font-size-base);
+        font-weight: @font-weight-medium;
+        .text-size(@font-size-lg);
     }
 
     &__content {
