--- a/apps/web/src/plugin/plugins/text/view/style.less
+++ b/apps/web/src/plugin/plugins/text/view/style.less
@@ -1,10 +1,9 @@
 .text-wrapper {
     display: flex;
     flex-direction: column;
-    padding: @padding-md;
+    padding: @padding-md 0;
     background-color: var(--white);
     border-radius: @border-radius-md;
-    .text-size(@font-size-3);
 
     &__preview {
         min-width: 300px;
@@ -13,12 +12,17 @@
     }
 
     &__label {
+        padding: 0 @padding-md;
         margin-bottom: @margin-xs;
+        font-weight: @font-weight-medium;
+        .text-size(@font-size-lg);
     }
 
     &__content {
         flex: 1;
+        padding: 0 @padding-md;
         overflow: auto;
         word-break: break-all;
+        .text-size(@font-size-base);
     }
 }
