--- a/apps/web/src/pages/workflow/views/editor/components/ifelse-node/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/ifelse-node/style.less
@@ -15,19 +15,20 @@
         position: relative;
         display: flex;
         gap: @margin-xxs;
-        padding: @padding-xxs @padding-xs;
+        padding: @padding-xxs 44px @padding-xxs @padding-xs;
         margin-top: @margin-xxs;
         background-color: var(--component-background-gray);
         border-radius: @border-radius-base;
         .text-size(@font-size-sm);
 
         .name {
-            max-width: 45px;
+            max-width: calc(100%* 0.3333);
             color: var(--text-color-main);
         }
 
         .value {
-            max-width: 45px;
+            flex: 1;
+            width: 0;
         }
 
         .description {
@@ -35,6 +36,7 @@
         }
 
         .operator {
+            max-width: calc(100%* 0.3333);
             white-space: nowrap;
         }
 
