--- a/apps/web/src/pages/workflow/views/editor/components/log-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/log-panel/style.less
@@ -75,7 +75,7 @@
         height: 100%;
     }
 
-    .@{mui-prefix}CircularProgress-root {
+    > .@{mui-prefix}CircularProgress-root {
         position: absolute;
         top: 50%;
         left: 50%;
