--- a/apps/web/src/plugin/plugins/image/view/style.less
+++ b/apps/web/src/plugin/plugins/image/view/style.less
@@ -27,7 +27,7 @@
         border-radius: @border-radius-base;
     }
 
-    &__empty_icon {
+    & &__empty_icon {
         font-size: @font-size-7;
         color: var(--icon-color-gray-light);
     }
