feat: dashboard select widget ui optimize

--- a/apps/web/src/pages/dashboard/components/plugin-list-class/style.less
+++ b/apps/web/src/pages/dashboard/components/plugin-list-class/style.less
@@ -15,27 +15,22 @@
     }
 
     &-item {
-        padding: 0 @padding-xs;
-
         &-content {
-            padding: @padding-xs @padding-sm;
-            margin-top: @margin-xs;
+            padding: @padding-xxs 0;
             font-size: @font-size-sm;
             text-align: center;
-            background: var(--gray-color-1);
             border: 1px solid transparent;
             border-radius: @border-radius-md;
             cursor: pointer;
 
             &:hover {
-                background: var(--primary-color-1);
                 border: 1px solid var(--primary-color-base);
             }
 
             &-icon {
                 display: block;
-                width: 55px;
-                height: 55px;
+                width: 44px;
+                height: 44px;
                 margin: 0 auto @margin-xs;
             }
 
