--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -118,7 +118,7 @@
             flex: 1;
             flex-direction: column;
             align-items: center;
-            padding-top: @padding-xxl;
+            padding: @padding-xxl @padding-md 0;
             overflow-y: auto;
 
             &-title {
