fix: optimized the style of Confirm component

--- a/apps/web/src/components/confirm/style.less
+++ b/apps/web/src/components/confirm/style.less
@@ -37,7 +37,7 @@
 
     &.@{prefix}-confirm-with-icon {
         .@{mui-prefix}DialogContent-root {
-            padding-left: @padding-xl + 32px;
+            padding-left: @padding-xxl + 32px;
         }
     }
 
