feat: dashboard resizing status to hide the top operation icons

--- a/apps/web/src/pages/dashboard/components/widgets/style.less
+++ b/apps/web/src/pages/dashboard/components/widgets/style.less
@@ -17,6 +17,10 @@
     &.resizing {
         transition: none;
         will-change: width, height;
+
+        .dashboard-content-widget-icon-edit {
+            display: none !important;
+        }
     }
 
     &.react-grid-placeholder {
