feat: add selection mode for workflow editor

--- a/apps/web/src/pages/workflow/views/editor/components/controls/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/controls/style.less
@@ -20,10 +20,14 @@
             &.@{mui-prefix}-disabled {
                 opacity: 0.5;
             }
-        }
-    }
 
-    .add-button {
-        padding: (@padding-xs - 2) @padding-xs;
+            &.btn-add {
+                color: var(--text-color-main);
+            }
+
+            &.active {
+                color: var(--text-color-main);
+            }
+        }
     }
 }
