feat: Optimized dashboard add widget Popover styles

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -9,7 +9,6 @@
 
     .@{prefix}-tab-content {
         flex: 1;
-        padding: @padding-lg 0 0 0;
         overflow: hidden;
         background: var(--gray-color-2);
 
@@ -75,7 +74,7 @@
         display: flex;
         min-height: 0 !important;
         padding: 0 !important;
-        background: #fff;
+        background: var(--component-background);
     }
 
     &-widget-grid-edit {
@@ -107,10 +106,11 @@
         }
 
         &-operate {
+            position: relative;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0 @padding-xxl 0 @padding-md;
+            padding: @padding-md;
         }
 
         &-empty {
