feat: Adjust the UI view of a form element

--- a/apps/web/src/components/sidebar/style.less
+++ b/apps/web/src/components/sidebar/style.less
@@ -164,9 +164,8 @@
 
     .@{mui-prefix}MenuItem-root {
         padding: @padding-xs @padding-lg;
-        .text-size(@font-size-md);
 
-        .MuiListItemIcon-root {
+        .@{mui-prefix}ListItemIcon-root {
             min-width: unset;
             margin-right: @margin-sm;
         }
@@ -176,7 +175,6 @@
 .ms-sidebar-submenu__item {
     .@{mui-prefix}MenuItem-root {
         padding: @padding-xs @padding-md;
-        .text-size(@font-size-md);
     }
     .@{mui-prefix}Paper-root {
         .@{mui-prefix}List-root {
