feat: Optimize the base component style and Adjust some page styles

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -110,7 +110,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: @padding-md;
+            padding: @padding-md @padding-xxl @padding-md @padding-md;
         }
 
         &-empty {
@@ -252,34 +252,4 @@
     &-confirm-delete-icon {
         color: var(--orange-6);
     }
-}
-
-.bg-custom-scrollbar::-webkit-scrollbar {
-    position: absolute;
-    inset: 0;
-    width: 11px;
-    height: 12px;
-}
-
-.bg-custom-scrollbar::-webkit-scrollbar-corner {
-    background-color: transparent;
-}
-
-.bg-custom-scrollbar::-webkit-scrollbar-thumb {
-    min-height: 24px;
-    background: transparent;
-    background-clip: padding-box;
-    border: 2px solid transparent;
-    border-radius: 6px;
-}
-
-.bg-custom-scrollbar:hover::-webkit-scrollbar-thumb:hover {
-    background: var(--gray-4);
-    background-clip: content-box;
-}
-
-.bg-custom-scrollbar:hover::-webkit-scrollbar-thumb {
-    background: var(--gray-4);
-    background-clip: padding-box;
-    border: 2px solid transparent;
 }
