feat: Adjust the default color of the chart on the dashboard and the style of the editor component

--- a/apps/web/src/components/code-editor/components/lang-select/style.less
+++ b/apps/web/src/components/code-editor/components/lang-select/style.less
@@ -3,14 +3,14 @@
     color: var(--text-color-secondary);
     .text-size(@font-size-md);
 
-    .MuiSelect-select.MuiInputBase-input {
+    .@{mui-prefix}Select-select.@{mui-prefix}InputBase-input {
         padding: 0;
         padding-right: @padding-xxl;
         font-weight: @font-weight-medium;
         color: var(--text-color-secondary);
     }
 
-    .MuiOutlinedInput-notchedOutline {
+    fieldset.@{mui-prefix}OutlinedInput-notchedOutline {
         border: unset;
     }
 }
