--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/code-editor/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/code-editor/style.less
@@ -1,4 +1,13 @@
-.@{prefix}-code-editor-config {
-    width: 100%;
-    height: 240px;
+.ms-code-editor {
+    &-header {
+        & &__title {
+            .@{mui-prefix}FormControl-root {
+                margin: 0;
+            }
+        }
+    }
 }
+// .@{prefix}-code-editor-config {
+//     width: 100%;
+//     height: 240px;
+// }
