--- a/apps/web/src/pages/workflow/components/import-modal/components/style.less
+++ b/apps/web/src/pages/workflow/components/import-modal/components/style.less
@@ -7,7 +7,7 @@
         align-items: center;
         align-self: stretch;
         justify-content: center;
-        padding: 35px @padding-sm 41px;
+        padding: 60px @padding-sm;
         background: var(--component-background-gray);
         border: 1px dashed var(--border-color-base);
         border-radius: @border-radius-xs;
@@ -52,6 +52,5 @@
                 }
             }
         }
-
     }
 }
