--- a/apps/web/src/pages/workflow/components/log-modal/style.less
+++ b/apps/web/src/pages/workflow/components/log-modal/style.less
@@ -38,7 +38,7 @@
         display: flex;
         flex-direction: column;
         width: 210px;
-        background-color: var(--body-background);
+        background-color: var(--gray-1);
 
         &__scroll {
             width: 100%;
