feat: Optimize icon select component styles

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -193,7 +193,7 @@
         height: 16px;
         overflow: hidden;
         background: var(--primary-color-base);
-        border: 2px solid var(--primary-color-base);
+        border: 2px solid var(--component-background);
         border-radius: 50%;
         cursor: nwse-resize;
     }
