--- a/apps/web/src/plugin/components/icon-select/style.less
+++ b/apps/web/src/plugin/components/icon-select/style.less
@@ -12,10 +12,18 @@
                 content: '';
             }
         }
+
+        .MuiInputBase-root {
+            height: 36px;
+        }
     }
 
     &-menu:hover {
         background: var(--main-background) !important;
+    }
+
+    &-menu.@{mui-prefix}MenuItem-root.@{mui-prefix}-focusVisible {
+        background-color: unset;
     }
 
     &-icon {
@@ -26,7 +34,7 @@
         line-height: 0;
 
         &-active {
-            background: rgba(52, 145, 250, 0.08);
+            background: var(--primary-color-1);
             border-radius: 50%;
         }
 
@@ -35,7 +43,7 @@
         }
 
         &:hover {
-            background: rgba(0,0,0,.04);
+            background: rgba(0, 0, 0, 0.04);
             border-radius: 50%;
         }
     }
