--- a/apps/web/src/plugin/config-plugin/style.less
+++ b/apps/web/src/plugin/config-plugin/style.less
@@ -20,6 +20,8 @@
             justify-content: center;
             width: 100%;
             height: 100%;
+            overflow: hidden;
+            border-radius: @border-radius-md;
         }
     }
 
