--- a/apps/web/src/plugin/plugins/icon-remaining/view/style.less
+++ b/apps/web/src/plugin/plugins/icon-remaining/view/style.less
@@ -6,6 +6,7 @@
     height: 100%;
     padding: @padding-md;
     background: var(--main-background);
+    border-radius: @border-radius-md;
 
     &-preview {
         width: 170px;
