--- a/apps/web/src/plugin/config-plugin/style.less
+++ b/apps/web/src/plugin/config-plugin/style.less
@@ -20,6 +20,8 @@
             justify-content: center;
             width: 100%;
             height: 100%;
+            overflow: hidden;
+            border-radius: @border-radius-md;
         }
     }
 
@@ -29,8 +31,14 @@
         overflow-y: auto;
         border-top: 1px solid var(--border-color-base);
 
-        .form-contain .form-box:last-child {
-            margin-bottom: @margin-md !important;
+        // .form-contain .form-box:last-child {
+        //     margin-bottom: @margin-md !important;
+        // }
+
+        .form-contain {
+            .@{mui-prefix}FormControl-root:last-child {
+                margin-bottom: @margin-md;
+            }
         }
     }
 
@@ -53,8 +61,8 @@
         min-height: 300px;
     }
 
-    .MuiTextField-root:first-child {
-        margin: 0 !important;
-        margin-top: @margin-sm !important;
-    }
+    // .MuiTextField-root:first-child {
+    //     margin: 0 !important;
+    //     margin-top: @margin-sm !important;
+    // }
 }
