--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -26,6 +26,56 @@
         }
     }
 
+    &-columns {
+        &-header {
+            display: flex;
+            align-items: center;
+    
+            &-label {
+                flex: 1;
+            }
+    
+            &-icon {
+                display: flex;
+                margin-left: @margin-xxs;
+                color: var(--gray-color-7);
+    
+                &-active {
+                    color: var(--primary-color-7);
+                }
+            }
+        }
+    }
+
+    &-popover {
+        min-width: 240px;
+        padding: @padding-xl;
+
+        &-filter {
+            &-searchInput {
+                margin-bottom: @margin-xxl;
+
+                input {
+                    padding-left: @padding-lg;
+                }
+            }
+            
+        }
+
+        &-footer {
+            display: flex;
+            margin-top: @margin-lg;
+
+            &-reset {
+                flex: 1;
+
+                &-disable {
+                    cursor: not-allowed;
+                }
+            }
+        }
+    }
+
     & &__body {
         flex: 1;
         overflow: auto;
