feat: fix multiple form text overload bug and Optimize dashboard data view UI

--- a/apps/web/src/pages/dashboard/components/plugin-list/style.less
+++ b/apps/web/src/pages/dashboard/components/plugin-list/style.less
@@ -25,6 +25,7 @@
 
             &:hover {
                 border: 1px solid var(--primary-color-base);
+                transition: border-color 0.2s ease-in-out;
             }
 
             &-icon {
