--- a/apps/web/src/plugin/plugins/data-card/view/style.less
+++ b/apps/web/src/plugin/plugins/data-card/view/style.less
@@ -42,6 +42,7 @@
     &__title {
         max-width: calc(100% - 28px);
         margin-left: @margin-xxs;
+        color: var(--text-color-secondary);
         .text-size(@font-size-base);
     }
 
