--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -218,6 +218,10 @@ input.@{mui-prefix}InputBase-input {
         .@{mui-prefix}FormLabel-asterisk {
             margin-right: @margin-xxs;
         }
+
+        &.@{mui-prefix}-error {
+            color: var(--text-color-primary);
+        }
     }
 
     .@{mui-prefix}OutlinedInput-notchedOutline {
